--- a/Jupyter Notebooks/Day1.ipynb
+++ b/Jupyter Notebooks/Day1.ipynb
@@ -2,16 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9a252ab5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Importing necessary libraries for analysis\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from datetime import date"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Machine Learning",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
