Added code for question 2: To find out which product categories have a CTR greater than the aggregated average overall CTR

--- a/Day2.ipynb
+++ b/Day2.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "910f7bd0",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "aec763f7",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ac1753fc",
    "metadata": {},
    "outputs": [
@@ -264,7 +264,7 @@
        "8          200    10/10/2024  0.070000           False  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "d7fea6d4",
    "metadata": {},
    "outputs": [
@@ -311,6 +311,67 @@
     "avg_ctr_by_category = electronics_oct_2024.groupby('product_category')['CTR'].mean()\n",
     "\n",
     "print(\"Average CTR by Electronics Product Category in October 2024\", avg_ctr_by_category)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "f63c7cff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0622512077294686\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 2:\n",
+    "# Which product categories have a CTR greater than the aggregated overall average CTR for sponsored product ads during October 2024? \n",
+    "# This analysis will identify high-performing categories for further optimization.  # \n",
+    "# For this question, we want to calculate CTR for each ad, then get the average across ads by product category & overall.\n",
+    "\n",
+    "# Getting aggregated overall average CTR for sponsored product ads during October 2024\n",
+    "oct_2024 = combined[(combined['recorded_date'].dt.year == 2024) &(combined['recorded_date'].dt.month == 10)]\n",
+    "oct_2024\n",
+    "\n",
+    "\n",
+    "avg_CTR = oct_2024['CTR'].mean()\n",
+    "print(avg_CTR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "68dca918",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Product categories with CTR greater than overall average CTR:\n",
+      "product_category\n",
+      "Books                    0.10000\n",
+      "Electronics & Gadgets    0.07913\n",
+      "Kitchen                  0.07000\n",
+      "Name: CTR, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Calculate average CTR per product category\n",
+    "avg_ctr_by_category = oct_2024.groupby('product_category')['CTR'].mean()\n",
+    "\n",
+    "# Find categories where average CTR is greater than overall average CTR\n",
+    "categories_above_avg = avg_ctr_by_category[avg_ctr_by_category > avg_CTR]\n",
+    "\n",
+    "print(\"Product categories with CTR greater than overall average CTR:\")\n",
+    "print(categories_above_avg)\n",
+    "\n"
    ]
   }
  ],
