Added code for question two: Grouping by number of search results & averaging interaction time for each group

--- a/Jupyter Notebooks/Day4.ipynb
+++ b/Jupyter Notebooks/Day4.ipynb
@@ -112,6 +112,45 @@
     "engagement_data_cleaned = engagement_data.drop_duplicates()\n",
     "engagement_data_cleaned.to_csv('engagement_data.csv', index = False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "15589204",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "search_results_displayed\n",
+       "5     41.625000\n",
+       "10    76.071429\n",
+       "15    67.107143\n",
+       "20    59.791667\n",
+       "Name: interaction_time, dtype: float64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "engagement_data_cleaned\n",
+    "\n",
+    "# Question Two\n",
+    "# Grouping by number of search results displayed and then calculate the average interaction time for each group\n",
+    "grouped_engagement_data = engagement_data_cleaned.groupby('search_results_displayed')['interaction_time'].mean()\n",
+    "grouped_engagement_data "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ccbcb06d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
