Added code for question 3: Determining optimal number of search results

--- a/Jupyter Notebooks/Day4.ipynb
+++ b/Jupyter Notebooks/Day4.ipynb
@@ -149,8 +149,53 @@
    "execution_count": null,
    "id": "ccbcb06d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "search_results_displayed\n",
+       "10    76.071429\n",
+       "15    67.107143\n",
+       "20    59.791667\n",
+       "5     41.625000\n",
+       "Name: interaction_time, dtype: float64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Question 3: Determining Optimal number of search results\n",
+    "sorted = grouped_engagement_data.sort_values(ascending=False)\n",
+    "sorted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53d517db",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(10)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Question Three\n",
+    "\n",
+    "sorted_interaction_time = grouped_engagement_data.sort_values(ascending=False)\n",
+    "optimal_number_of_searches = sorted_interaction_time.index[0]\n",
+    "optimal_number_of_searches"
+   ]
   }
  ],
  "metadata": {
