Restructured code to drop duplicates first before handling missing values

--- a/Jupyter Notebooks/Day5.ipynb
+++ b/Jupyter Notebooks/Day5.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "5e52001e",
    "metadata": {},
    "outputs": [
@@ -128,47 +128,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rows with missing values: 4\n",
-      "Total rows: 57\n",
-      "Percentage of rows with missing values: 7.02%\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Question One:\n",
-    "# What percentage of records have missing values in at least one column?\n",
-    "\n",
-    "# 1. Boolean Series: True if a row has any missing value\n",
-    "rows_with_missing = pre_sale_data.isnull().any(axis=1)\n",
-    "\n",
-    "# 2. Count how many rows have missing values\n",
-    "num_missing_rows = rows_with_missing.sum()\n",
-    "\n",
-    "# 3. Total number of rows\n",
-    "total_rows = pre_sale_data.shape[0]\n",
-    "\n",
-    "# 4. Calculate percentage\n",
-    "percent_missing_rows = (num_missing_rows / total_rows) * 100\n",
-    "\n",
-    "print(f\"Rows with missing values: {num_missing_rows}\")\n",
-    "print(f\"Total rows: {total_rows}\")\n",
-    "print(f\"Percentage of rows with missing values: {percent_missing_rows:.2f}%\")\n",
-    "\n",
-    "# Handling of missing data\n",
-    "pre_sale_data['region'] = pre_sale_data.fillna('Unknown')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "03c11a23",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
+      "0\n",
+      "Rows with missing values: 0\n",
+      "Total rows: 55\n",
+      "Percentage of rows with missing values: 0.00%\n"
      ]
     },
     {
@@ -760,39 +723,40 @@
        "56                   2  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Handling of missing data\n",
+    "# Question One:\n",
+    "# What percentage of records have missing values in at least one column?\n",
+    "\n",
+    "# 0. Always drop duplicates first\n",
     "duplicates = pre_sale_data.duplicated().sum()\n",
     "print(duplicates)\n",
     "pre_sale_data = pre_sale_data.drop_duplicates()\n",
     "\n",
+    "# 1. Boolean Series: True if a row has any missing value\n",
+    "rows_with_missing = pre_sale_data.isnull().any(axis=1)\n",
+    "\n",
+    "# 2. Count how many rows have missing values\n",
+    "num_missing_rows = rows_with_missing.sum()\n",
+    "\n",
+    "# 3. Total number of rows\n",
+    "total_rows = pre_sale_data.shape[0]\n",
+    "\n",
+    "# 4. Calculate percentage\n",
+    "percent_missing_rows = (num_missing_rows / total_rows) * 100\n",
+    "\n",
+    "print(f\"Rows with missing values: {num_missing_rows}\")\n",
+    "print(f\"Total rows: {total_rows}\")\n",
+    "print(f\"Percentage of rows with missing values: {percent_missing_rows:.2f}%\")\n",
+    "\n",
+    "# Handling of missing data\n",
     "pre_sale_data['region'] = pre_sale_data['region'].fillna('Unknown')\n",
     "pre_sale_data['demographic_group'] = pre_sale_data['demographic_group'].fillna('Unknown')\n",
-    "pre_sale_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "6842f6cc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    }
-   ],
-   "source": [
-    "duplicates = pre_sale_data.duplicated().sum()\n",
-    "print(duplicates)"
+    "pre_sale_data\n"
    ]
   }
  ],
