Added code for question 2:Creating a pivot table for total sales volume by month and temperature range

--- a/Jupyter Notebooks/Day6.ipynb
+++ b/Jupyter Notebooks/Day6.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "fda0fd8b",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "a3cf0c4c",
    "metadata": {},
    "outputs": [
@@ -115,6 +115,79 @@
     "# 1. Drop duplicates based on 'transaction_id' (keeping the first occurrence)\n",
     "ice_cream_sales_data = ice_cream_sales_data.drop_duplicates(subset='transaction_id', keep='first').reset_index(drop=True)\n",
     "print(f\"Dataset shape after removing duplicates: {ice_cream_sales_data.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "cb8169b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "temperature_range  <60  60-69  70-79  80-89  90-99  100+\n",
+      "month                                                   \n",
+      "1                    0    190     41    149      0     0\n",
+      "2                    0    116    102     22      0    80\n",
+      "3                   25    119    130     61      0     0\n",
+      "4                    0    122      0    114     28     0\n",
+      "5                    0    156     89    120      0     0\n",
+      "6                    0     34    220   1000      0     0\n",
+      "7                    0     60   1295     59      0     0\n",
+      "8                    0     66    134    160      0     0\n",
+      "9                    0     72    137    101     65     0\n",
+      "10                   0    100    186    104      0     0\n",
+      "11                   0     71     84    250      0     0\n",
+      "12                   0     74     90    256      0     0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\enock\\AppData\\Local\\Temp\\ipykernel_15312\\961717735.py:15: FutureWarning: The default value of observed=False is deprecated and will change to observed=True in a future version of pandas. Specify observed=False to silence this warning and retain the current behavior\n",
+      "  pivot_table = pd.pivot_table(ice_cream_sales_data,values='sales_volume',index='month',columns='temperature_range',aggfunc='sum',fill_value=0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Quetion Two:\n",
+    "# Creating a pivot table to summarize the total sales volume of ice cream products by month and temperature range. \n",
+    "\n",
+    "# Convert sale_date to datetime\n",
+    "ice_cream_sales_data['sale_date'] = pd.to_datetime(ice_cream_sales_data['sale_date'])\n",
+    "# Extract month number\n",
+    "ice_cream_sales_data['month'] = ice_cream_sales_data['sale_date'].dt.month\n",
+    "\n",
+    "# Create temperature bins\n",
+    "bins = [-np.inf, 60, 70, 80, 90, 100, np.inf]\n",
+    "labels = ['<60', '60-69', '70-79', '80-89', '90-99', '100+']\n",
+    "\n",
+    "ice_cream_sales_data['temperature_range'] = pd.cut(ice_cream_sales_data['temperature'],bins=bins,labels=labels,right=False)\n",
+    "\n",
+    "pivot_table = pd.pivot_table(ice_cream_sales_data,values='sales_volume',index='month',columns='temperature_range',aggfunc='sum',fill_value=0)\n",
+    "\n",
+    "print(pivot_table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "1e86e15e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ice_cream_sales_data['sale_date'].dtype)"
    ]
   }
  ],
