Added code for question 2:Unique combinations of product and celebrity id

--- a/Jupyter Notebooks/Day7.ipynb
+++ b/Jupyter Notebooks/Day7.ipynb
@@ -110,6 +110,47 @@
     "\n",
     "print(missing_sales)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "516f29ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    celebrity_id  product_id\n",
+      "0            101         901\n",
+      "2            102         902\n",
+      "3            103         903\n",
+      "4            104         904\n",
+      "7            105         905\n",
+      "9            106         906\n",
+      "10           107         907\n",
+      "11           101         908\n",
+      "12           102         909\n",
+      "13           108         910\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question Two: Unique combinations of celebrity id and product id\n",
+    "# To ensure that each collaboration is accurately accounted for in the analysis of Nike's marketing performance.\n",
+    "# Unique combinations of celebrity_id and product_id\n",
+    "unique_combinations = fct_sales_q1_2025[['celebrity_id', 'product_id']].drop_duplicates()\n",
+    "\n",
+    "print(unique_combinations)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10e02992",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
