Added code for question 3:Ranking the unique celebrity collaborations based on their total sales amounts and list the top 3 collaborations in descending order

--- a/Jupyter Notebooks/Day7.ipynb
+++ b/Jupyter Notebooks/Day7.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "516f29ab",
    "metadata": {},
    "outputs": [
@@ -149,8 +149,29 @@
    "execution_count": null,
    "id": "10e02992",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "   celebrity_id  product_id  sale_amount\n",
+      "2           102         902      3800.50\n",
+      "4           103         903      3700.75\n",
+      "6           105         905      2500.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question Three:\n",
+    "# Ranking the unique celebrity collaborations based on their total sales amounts and list the top 3 collaborations in descending order\n",
+    "# Filling in missing values with 0 for correct calculation\n",
+    "fct_sales_q1_2025['sale_amount'] = fct_sales_q1_2025['sale_amount'].fillna(0)\n",
+    "\n",
+    "# Group by both celebrity and product\n",
+    "top3_celebrity_collaborations = ( fct_sales_q1_2025.groupby(['celebrity_id', 'product_id'])['sale_amount'].sum().reset_index().sort_values(by='sale_amount', ascending=False).head(3))\n",
+    "print(top3_celebrity_collaborations)\n"
+   ]
   }
  ],
  "metadata": {
