Added code for question2:Average order value for each payment method

--- a/Jupyter Notebooks/Day8.ipynb
+++ b/Jupyter Notebooks/Day8.ipynb
@@ -110,6 +110,30 @@
     "\n",
     "print(transactions_by_payment)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0d057c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  payment_method  Average order value\n",
+      "0    credit_card                281.6\n",
+      "1     debit_card                 90.0\n",
+      "2         paypal                 70.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question Two\n",
+    "# Between April 1st and June 30th, 2025, what is the average order value for each payment method?\n",
+    "order_value_by_payment_method = fct_trxn_AprJun_2025.groupby('payment_method')['order_value'].mean().reset_index(name='Average order value')\n",
+    "print(order_value_by_payment_method)"
+   ]
   }
  ],
  "metadata": {
