Added code for question three

--- a/Jupyter Notebooks/Day8.ipynb
+++ b/Jupyter Notebooks/Day8.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "3a34b677",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "1e2804c1",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c0d057c1",
    "metadata": {},
    "outputs": [
@@ -133,6 +133,49 @@
     "# Between April 1st and June 30th, 2025, what is the average order value for each payment method?\n",
     "order_value_by_payment_method = fct_trxn_AprJun_2025.groupby('payment_method')['order_value'].mean().reset_index(name='Average order value')\n",
     "print(order_value_by_payment_method)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "3bc9a322",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Credit Card Order Value: 281.6\n",
+      "Number of Credit Card Transactions: 25\n",
+      "Transactions Switching: 5\n",
+      "Predicted Sales Lift: 211.19999999999982\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question Three\n",
+    "# Between April 1st and June 30th, 2025, what would be the predicted sales lift if a 'pay over time' option were introduced\n",
+    "\n",
+    "# Filter for credit card transactions\n",
+    "cc_trxns = fct_trxn_AprJun_2025[fct_trxn_AprJun_2025['payment_method'] == 'credit_card']\n",
+    "# Key metrics\n",
+    "cc_avg_order = cc_trxns['order_value'].mean()\n",
+    "cc_count = cc_trxns.shape[0]\n",
+    "# Transactions switching to pay over time\n",
+    "switched_count = int(0.2 * cc_count)\n",
+    "# New order value under pay-over-time\n",
+    "new_order_value = cc_avg_order * 1.15\n",
+    "# Predicted sales from switched transactions\n",
+    "predicted_sales_switched = switched_count * new_order_value\n",
+    "# Baseline sales for those transactions (without pay-over-time)\n",
+    "baseline_sales_switched = switched_count * cc_avg_order\n",
+    "# Sales lift\n",
+    "sales_lift = predicted_sales_switched - baseline_sales_switched\n",
+    "\n",
+    "print(\"Average Credit Card Order Value:\", cc_avg_order)\n",
+    "print(\"Number of Credit Card Transactions:\", cc_count)\n",
+    "print(\"Transactions Switching:\", switched_count)\n",
+    "print(\"Predicted Sales Lift:\", sales_lift)"
    ]
   }
  ],
