Added code for question 2:Calculating the 25th, 50th, and 75th percentiles of the number of stories created per user per day

--- a/Jupyter Notebooks/Day9.ipynb
+++ b/Jupyter Notebooks/Day9.ipynb
@@ -18,16 +18,541 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "235fe3e6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Importing necessary libraries for analysis\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "090987d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    user_id  story_date  story_count\n",
+      "0  user_001    7/3/2024          3.0\n",
+      "1  user_001    7/3/2024          3.0\n",
+      "2  user_001   8/15/2024          5.0\n",
+      "3  user_001   9/10/2024          0.0\n",
+      "4  user_001   10/5/2024         20.0\n",
+      "5  user_001   7/15/2024          2.0\n",
+      "6  user_002    7/3/2024          4.0\n",
+      "7  user_002    7/4/2024          3.0\n",
+      "8  user_002         NaN          6.0\n",
+      "9  user_002  12/25/2024          1.0\n",
+      "['user_id', 'story_date', 'story_count']\n",
+      "Number of rows and columns is: (58, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Getting the Dataset\n",
+    "stories_data = pd.read_csv(r'D:\\Data Journey\\Python-Summer-Party\\DataSets\\stories_data.csv')\n",
+    "\n",
+    "# Display the first few rows to understand the data\n",
+    "print(stories_data.head(10))  # Shows the first 5 rows with columns\n",
+    "print(list(stories_data.columns))\n",
+    "print('Number of rows and columns is:', stories_data.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "81f90f24",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>story_date</th>\n",
+       "      <th>story_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>user_001</td>\n",
+       "      <td>2024-07-03</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>user_001</td>\n",
+       "      <td>2024-07-03</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>user_001</td>\n",
+       "      <td>2024-08-15</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>user_001</td>\n",
+       "      <td>2024-09-10</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>user_001</td>\n",
+       "      <td>2024-10-05</td>\n",
+       "      <td>20.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>user_001</td>\n",
+       "      <td>2024-07-15</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>user_002</td>\n",
+       "      <td>2024-07-03</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>user_002</td>\n",
+       "      <td>2024-07-04</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>user_002</td>\n",
+       "      <td>2024-12-25</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>user_002</td>\n",
+       "      <td>2025-01-15</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>user_002</td>\n",
+       "      <td>2025-06-29</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>user_003</td>\n",
+       "      <td>2024-07-10</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>user_003</td>\n",
+       "      <td>2024-08-20</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>user_003</td>\n",
+       "      <td>2024-08-20</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>user_003</td>\n",
+       "      <td>2025-03-11</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2025-03-12</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>USER_003</td>\n",
+       "      <td>2025-04-01</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>user_004</td>\n",
+       "      <td>2024-07-15</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>user_004</td>\n",
+       "      <td>2024-09-30</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>user_004</td>\n",
+       "      <td>2024-10-10</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>user_004</td>\n",
+       "      <td>2024-11-11</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>user_004</td>\n",
+       "      <td>2025-02-28</td>\n",
+       "      <td>12.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>user_004</td>\n",
+       "      <td>2025-03-01</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>user_005</td>\n",
+       "      <td>2024-08-01</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>user_005</td>\n",
+       "      <td>2024-08-02</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>user_005</td>\n",
+       "      <td>2024-08-03</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>user_005</td>\n",
+       "      <td>2024-08-04</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>user_005</td>\n",
+       "      <td>2024-08-05</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>user_005</td>\n",
+       "      <td>2024-08-06</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>user_006</td>\n",
+       "      <td>2024-09-01</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>user_006</td>\n",
+       "      <td>2024-09-02</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>user_006</td>\n",
+       "      <td>2024-09-03</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>user_006</td>\n",
+       "      <td>2024-09-04</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>user_006</td>\n",
+       "      <td>2024-09-05</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>user_007</td>\n",
+       "      <td>2024-10-10</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>user_007</td>\n",
+       "      <td>2024-10-11</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>user_007</td>\n",
+       "      <td>2024-10-12</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>user_007</td>\n",
+       "      <td>2024-10-13</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>user_007</td>\n",
+       "      <td>2024-10-14</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>user_007</td>\n",
+       "      <td>2024-10-15</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>user_008</td>\n",
+       "      <td>2025-01-01</td>\n",
+       "      <td>11.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>user_008</td>\n",
+       "      <td>2025-01-02</td>\n",
+       "      <td>12.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>user_008</td>\n",
+       "      <td>2025-01-03</td>\n",
+       "      <td>13.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>user_008</td>\n",
+       "      <td>2025-01-04</td>\n",
+       "      <td>14.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>user_008</td>\n",
+       "      <td>2025-01-05</td>\n",
+       "      <td>15.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>user_008</td>\n",
+       "      <td>2025-01-06</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>user_009</td>\n",
+       "      <td>2024-12-01</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>user_009</td>\n",
+       "      <td>2024-12-02</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>user_009</td>\n",
+       "      <td>2024-12-03</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51</th>\n",
+       "      <td>user_009</td>\n",
+       "      <td>2024-12-04</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>user_009</td>\n",
+       "      <td>2024-12-05</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54</th>\n",
+       "      <td>user_010</td>\n",
+       "      <td>2025-03-15</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55</th>\n",
+       "      <td>user_010</td>\n",
+       "      <td>2025-03-16</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>user_010</td>\n",
+       "      <td>2025-03-17</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>user_010</td>\n",
+       "      <td>2025-03-18</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     user_id story_date  story_count\n",
+       "0   user_001 2024-07-03          3.0\n",
+       "1   user_001 2024-07-03          3.0\n",
+       "2   user_001 2024-08-15          5.0\n",
+       "3   user_001 2024-09-10          0.0\n",
+       "4   user_001 2024-10-05         20.0\n",
+       "5   user_001 2024-07-15          2.0\n",
+       "6   user_002 2024-07-03          4.0\n",
+       "7   user_002 2024-07-04          3.0\n",
+       "9   user_002 2024-12-25          1.0\n",
+       "10  user_002 2025-01-15          7.0\n",
+       "11  user_002 2025-06-29         10.0\n",
+       "12  user_003 2024-07-10          2.0\n",
+       "13  user_003 2024-08-20          8.0\n",
+       "14  user_003 2024-08-20          8.0\n",
+       "15  user_003 2025-03-11          5.0\n",
+       "16       NaN 2025-03-12          3.0\n",
+       "17  USER_003 2025-04-01          4.0\n",
+       "18  user_004 2024-07-15          6.0\n",
+       "19  user_004 2024-09-30          7.0\n",
+       "20  user_004 2024-10-10          4.0\n",
+       "21  user_004 2024-11-11          3.0\n",
+       "22  user_004 2025-02-28         12.0\n",
+       "23  user_004 2025-03-01          0.0\n",
+       "24  user_005 2024-08-01          1.0\n",
+       "25  user_005 2024-08-02          2.0\n",
+       "26  user_005 2024-08-03          3.0\n",
+       "27  user_005 2024-08-04          4.0\n",
+       "28  user_005 2024-08-05          NaN\n",
+       "29  user_005 2024-08-06          5.0\n",
+       "30  user_006 2024-09-01          9.0\n",
+       "31  user_006 2024-09-02         10.0\n",
+       "32  user_006 2024-09-03          9.0\n",
+       "33  user_006 2024-09-04         50.0\n",
+       "34  user_006 2024-09-05          8.0\n",
+       "36  user_007 2024-10-10          4.0\n",
+       "37  user_007 2024-10-11          4.0\n",
+       "38  user_007 2024-10-12          4.0\n",
+       "39  user_007 2024-10-13          3.0\n",
+       "40  user_007 2024-10-14          2.0\n",
+       "41  user_007 2024-10-15          1.0\n",
+       "42  user_008 2025-01-01         11.0\n",
+       "43  user_008 2025-01-02         12.0\n",
+       "44  user_008 2025-01-03         13.0\n",
+       "45  user_008 2025-01-04         14.0\n",
+       "46  user_008 2025-01-05         15.0\n",
+       "47  user_008 2025-01-06          0.0\n",
+       "48  user_009 2024-12-01          1.0\n",
+       "49  user_009 2024-12-02          2.0\n",
+       "50  user_009 2024-12-03          3.0\n",
+       "51  user_009 2024-12-04          4.0\n",
+       "52  user_009 2024-12-05          5.0\n",
+       "54  user_010 2025-03-15          7.0\n",
+       "55  user_010 2025-03-16          8.0\n",
+       "56  user_010 2025-03-17          9.0\n",
+       "57  user_010 2025-03-18         10.0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Question One\n",
+    "# Handling data inconsistencies in the story_date column & converting it to datetime and dropping invalid dates.\n",
+    "stories_data['story_date'] = pd.to_datetime(stories_data['story_date'],errors='coerce') # errors = coerce: nvalid dates like \"invalid_date\" will become NaT (Not a Time).\n",
+    "stories_data = stories_data.dropna(subset=['story_date'])\n",
+    "stories_data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c838a4b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25th percentile: 3.0\n",
+      "50th percentile (median): 4.0\n",
+      "75th percentile: 8.75\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question Two\n",
+    "# Calculating the 25th, 50th, and 75th percentiles of the number of stories created per user per day\n",
+    "# 0. Cleaning data column first\n",
+    "cleaned_story_counts = stories_data['story_count'].dropna()\n",
+    "p25 = np.percentile(cleaned_story_counts, 25)\n",
+    "p50 = np.percentile(cleaned_story_counts, 50)  # median\n",
+    "p75 = np.percentile(cleaned_story_counts, 75)\n",
+    "\n",
+    "print(\"25th percentile:\", p25)\n",
+    "print(\"50th percentile (median):\", p50)\n",
+    "print(\"75th percentile:\", p75)\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python (Arewadatascience)",
+   "language": "python",
+   "name": "arewadatascience"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
