Added code for question three:proportion of users who had more than 10 sales per day

--- a/Jupyter Notebooks/Day9.ipynb
+++ b/Jupyter Notebooks/Day9.ipynb
@@ -534,6 +534,38 @@
     "print(\"50th percentile (median):\", p50)\n",
     "print(\"75th percentile:\", p75)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "99ce1a71",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Proportion of users with >10 stories on any day: 36.36363636363637\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question Three\n",
+    "# Group by user and check if any of their story_count values exceed 10\n",
+    "users_with_more_than_10 = stories_data.groupby(\"user_id\")[\"story_count\"].apply(lambda x: (x > 10).any())\n",
+    "\n",
+    "# Count how many users satisfied the condition\n",
+    "num_users_with_more_than_10 = users_with_more_than_10.sum()  # True counts as 1\n",
+    "\n",
+    "# Total number of unique users\n",
+    "total_users = users_with_more_than_10.shape[0]\n",
+    "\n",
+    "# Proportion\n",
+    "proportion = num_users_with_more_than_10 / total_users * 100\n",
+    "\n",
+    "print(\"Proportion of users with >10 stories on any day:\", proportion)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
