--- a/Jupyter Notebooks/Day10.ipynb
+++ b/Jupyter Notebooks/Day10.ipynb
@@ -150,6 +150,37 @@
     "app_cleaned = pd.to_numeric(app_cleaned, errors= 'coerce')\n",
     "app_cleaned"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "0f47b234",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    4.5\n",
+      "1    3.9\n",
+      "2    4.7\n",
+      "3    4.0\n",
+      "4    NaN\n",
+      "Name: rating, dtype: float64\n",
+      "43    4.4\n",
+      "44    4.5\n",
+      "45    4.0\n",
+      "46    NaN\n",
+      "47    4.6\n",
+      "Name: rating, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question Two\n",
+    "print(app_cleaned.head(5))\n",
+    "print(app_cleaned.tail(5))"
+   ]
   }
  ],
  "metadata": {
